hphp/hack/test/typecheck/readonly/foreach.php.exp
File "foreach.php", line 18, characters 5-8:
This value is readonly, its properties cannot be modified (Typing[4409])
